--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,41 +1,45 @@
-	body{
-				margin: 0;
-			}
-			img{
-				max-width: 100%;
-			}
-			ul,ol,li{
-				list-style-type:none;
-			} 
-			#logo{
-				float: left;
-				margin-left: 10%;
-				width: 30%;
-			}
-			#nav{
-				float: right;
-				margin-right: 10%;
-				width: 40%;
-			}
-			#nav li{
-				float: left;
-				width: 30%;
-				margin-top: 15px;
-				text-align: right;
-				font-size: large;
-				
-			}
-			a{			
-				text-decoration:none;			
-			}
-			#nav li a{
-				color: black;
-				padding: 20px;
-			}
-			#nav li a:hover{
-				border-bottom: solid 5px red;
-			}
-			#nav li .active{
-				border-bottom: solid 5px red;
-			}
-			
+body{
+	margin: 0;
+	text-align: center;
+}
+.top {
+	overflow: hidden;
+}
+img{
+	max-width: 100%;
+}
+ul,ol,li{
+	list-style-type:none;
+} 
+#logo{
+	float: left;
+	margin-left: 10%;
+	width: 30%;
+}
+#nav{
+	float: right;
+	margin-right: 10%;
+	width: 40%;
+}
+#nav li{
+	float: left;
+	width: 30%;
+	margin-top: 15px;
+	text-align: right;
+	font-size: large;
+	
+}
+a{			
+	text-decoration:none;			
+}
+#nav li a{
+	color: black;
+	padding: 20px;
+}
+#nav li a:hover{
+	border-bottom: solid 5px red;
+}
+#nav li .active{
+	border-bottom: solid 5px red;
+}
+	
